# Plot-ho-matic

./: .travis.yml  CHANGELOG.md  LICENSE  Plot-ho-matic.cabal  README.md  loadprotos.py  plot-ho-matic.cabal  plotstuff.py  plotter.cabal  stack.yaml  todo.txt
examples/: Example.hs  PlotExample.hs  SetExample.hs
src/: .gitignore  Accessors.hs  Colors.hs  DrawLine.hs  Example.hs  FieldLogs.hs  GAccessors.hs  GraphWidget.hs  Kite.hs  Main.hs  ParseArgs.hs  PlotChart.hs  PlotGL.hs  PlotHo.hs  PlotHoCommon.hs  PlotTypes.hs  Plotter.hs  PlotterGL.hs  Quotes.hs  ReadMaybe.hs  SetHo.hs  TestQuotes.hs  plotter.hs
src/Kite/: CarouselState.hs  Dcm.hs  KiteOutputs.hs  MultiCarousel.hs  PendulumOpt.hs  TestMessages.hs  Xyz.hs
src/PlotHo/: Accessors.hs  Channel.hs  Channels.hs  ChartRender.hs  GraphWidget.hs  HistoryChannel.hs  MultiSelectWidget.hs  OptionsWidget.hs  PlotChart.hs  PlotTypes.hs  Plotter.hs  ReadMaybe.hs  SignalSelector.hs
src/SetHo/: LookupTree.hs  OptionsWidget.hs
tests/: Tests.hs
travis/: cabal-apt-install
