name:                plot-ho-matic
version:             0.1.0.0
synopsis:            Line plotter for protobufs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

--library:
--  -- exposed-modules:     
--  -- other-modules:       
--  build-depends:       base ==4.6.*

executable plot-ho-matic
  hs-source-dirs:    src
  main-is:           Example.hs
--  other-modules:
  build-depends:     base >= 4.5.0 && < 4.7,
                     transformers,
                     protocol-buffers,
                     containers,
                     time,
                     bytestring,
                     Chart,
                     gtk,
                     data-accessor,
                     glib,
                     template-haskell
--                     ekg

--  if os(OSX)
--    cpp-options:     -DOSX
--    build-depends:   zeromq3-haskell
--  else
--    build-depends:   zeromq-haskell
--
  ghc-options:      -O2 -Wall -with-rtsopts=-T
  ghc-prof-options: -O2 -Wall -with-rtsopts=-T -prof -fprof-auto -fprof-cafs -rtsopts
  other-extensions: TemplateHaskell
