name:                plotter
version:             0.1.0.0
synopsis:            Line plotter for protobufs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base ==4.6.*
